@@ -23,6 +23,7 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_LIBTOOL
 AC_PROG_MAKE_SET
+AM_PROG_CC_C_O
 
 dnl GNOME_INIT
 pkg_modules="glib-2.0 gtk+-2.0 libgnome-2.0 libglade-2.0"
